@@ -24,6 +24,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.file.Files;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -40,6 +41,7 @@ import com.hartwig.hmftools.lilac.hla.HlaAllele;
 import com.hartwig.hmftools.lilac.hla.HlaAlleleCache;
 import com.hartwig.hmftools.lilac.hla.HlaContextFactory;
 import com.hartwig.hmftools.lilac.read.Indel;
+import com.hartwig.hmftools.lilac.seq.HlaExonSequences;
 import com.hartwig.hmftools.lilac.seq.HlaSequenceFile;
 import com.hartwig.hmftools.lilac.seq.HlaSequenceLoci;
 
@@ -58,7 +60,7 @@ public class ReferenceData
     public final List<HlaSequenceLoci> HlaYAminoAcidSequences;
 
     // four-digit allele to seq
-    public final Map<HlaAllele, HlaSequenceLoci> AminoAcidSequenceLookup;
+    public final Map<HlaAllele, HlaExonSequences> ExonSequencesLookup;
 
     public final List<HlaAllele> CommonAlleles; // common in population
     public final Map<Indel, HlaAllele> KnownStopLossIndelAlleles;
@@ -126,7 +128,7 @@ public class ReferenceData
         HlaYNucleotideSequences = Lists.newArrayList();
         HlaYAminoAcidSequences = Lists.newArrayList();
 
-        AminoAcidSequenceLookup = Maps.newHashMap();
+        ExonSequencesLookup = Maps.newHashMap();
 
         mDeflatedSequenceTemplate = null;
 
@@ -143,9 +145,9 @@ public class ReferenceData
 
         final List<String> ponLines = new BufferedReader(new InputStreamReader(
                 ReferenceData.class.getResourceAsStream(refFile)))
-                .lines().collect(Collectors.toList());
+                .lines().toList();
 
-        ponLines.stream().map(x -> Indel.fromString(x)).forEach(x -> INDEL_PON.add(x));
+        ponLines.stream().map(Indel::fromString).forEach(INDEL_PON::add);
     }
 
     public CohortFrequency getAlleleFrequencies() { return mAlleleFrequencies; }
@@ -174,7 +176,7 @@ public class ReferenceData
             if(!allele.equals(allele.asFourDigit()))
                 throw new RuntimeException(format("allele(%s) is not four-digit", allele));
 
-            AminoAcidSequenceLookup.computeIfAbsent(allele, k -> seq);
+            ExonSequencesLookup.computeIfAbsent(allele, k -> HlaExonSequences.create(GENE_CACHE.AminoAcidExonBoundaries, seq));
         }
     }
 
@@ -205,7 +207,7 @@ public class ReferenceData
             if(!allele.equals(allele.asFourDigit()))
                 throw new RuntimeException(format("allele(%s) is not four-digit", allele));
 
-            if(AminoAcidSequenceLookup.containsKey(allele))
+            if(ExonSequencesLookup.containsKey(allele))
                 continue;
 
             LL_LOGGER.warn("allele({}) with cohort frequency has no loaded sequences, dropping from allele frequencies", allele.toString());
@@ -220,8 +222,8 @@ public class ReferenceData
 
         loadStopLossRecoveryAllele();
 
-        HlaYNucleotideSequences.addAll(NucleotideSequences.stream().filter(x -> x.Allele.Gene.equals(GENE_Y)).collect(Collectors.toList()));
-        HlaYNucleotideSequences.forEach(x -> NucleotideSequences.remove(x));
+        HlaYNucleotideSequences.addAll(NucleotideSequences.stream().filter(x -> x.Allele.Gene.equals(GENE_Y)).toList());
+        HlaYNucleotideSequences.forEach(NucleotideSequences::remove);
 
         for(HlaSequenceLoci sequenceLoci : AminoAcidSequences)
         {
@@ -244,11 +246,11 @@ public class ReferenceData
     private void buildHlaYAminoAcidSequences()
     {
         // construct the AA allele sequences for HLA-Y from the nucleotides if it wasn't loaded
-        HlaYAminoAcidSequences.addAll(AminoAcidSequences.stream().filter(x -> x.Allele.Gene.equals(GENE_Y)).collect(Collectors.toList()));
+        HlaYAminoAcidSequences.addAll(AminoAcidSequences.stream().filter(x -> x.Allele.Gene.equals(GENE_Y)).toList());
 
         if(!HlaYAminoAcidSequences.isEmpty())
         {
-            HlaYAminoAcidSequences.forEach(x -> AminoAcidSequences.remove(x));
+            HlaYAminoAcidSequences.forEach(AminoAcidSequences::remove);
         }
         else
         {
@@ -279,7 +281,7 @@ public class ReferenceData
         mAlleleFrequencies.getAlleleFrequencies().entrySet().stream()
                 .filter(x -> x.getValue() >= COMMON_ALLELES_FREQ_CUTOFF)
                 .map(x -> mAlleleCache.requestFourDigit(x.getKey().toString()))
-                .forEach(x -> CommonAlleles.add(x));
+                .forEach(CommonAlleles::add);
 
         if(!CommonAlleles.isEmpty())
         {
@@ -306,7 +308,7 @@ public class ReferenceData
 
         final HlaAllele allele4d = allele.asFourDigit();
 
-        if(EXCLUDED_ALLELES.stream().anyMatch(x -> allele4d.matches(x)))
+        if(EXCLUDED_ALLELES.stream().anyMatch(allele4d::matches))
             return true;
 
         if(mConfig == null)
@@ -415,7 +417,7 @@ public class ReferenceData
         }
     }
 
-    public void loadSequenceFile(final List<String> fileContents, final List<HlaSequenceLoci> sequenceData, boolean isProteinFile)
+    public void loadSequenceFile(final Iterable<String> fileContents, final Collection<HlaSequenceLoci> sequenceData, boolean isProteinFile)
     {
         for(String line : fileContents)
         {
